# ChangeLog for sci-biology/rebase
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/rebase/ChangeLog,v 1.87 2008/08/27 14:58:50 ribosome Exp $

*rebase-808 (27 Aug 2008)

  27 Aug 2008; Olivier Fisette <ribosome@gentoo.org> +rebase-808.ebuild:
  New upstream version.

*rebase-708 (20 Aug 2007)

  20 Aug 2007; Olivier Fisette <ribosome@gentoo.org> +rebase-708.ebuild:
  New upstream version.

  18 Jul 2007; Olivier Fisette <ribosome@gentoo.org> -rebase-704.ebuild,
  -rebase-705.ebuild:
  Pruned older ebuilds that will never be stabilised.

*rebase-707 (18 Jul 2007)

  18 Jul 2007; Olivier Fisette <ribosome@gentoo.org> +rebase-707.ebuild:
  New upstream version. Ebuild updated for EMBOSS 5.0.0.

*rebase-705 (22 May 2007)

  22 May 2007; Olivier Fisette <ribosome@gentoo.org> -rebase-612.ebuild,
  +rebase-705.ebuild:
  New upstream version. Pruned old version.

*rebase-704 (11 Apr 2007)

  11 Apr 2007; Olivier Fisette <ribosome@gentoo.org> +rebase-704.ebuild:
  New upstream version.

*rebase-612 (12 Dec 2006)

  12 Dec 2006; Olivier Fisette <ribosome@gentoo.org> -rebase-611.ebuild,
  +rebase-612.ebuild:
  New upstream version. Removed old version.

  10 Dec 2006; Olivier Fisette <ribosome@gentoo.org> -rebase-601-r1.ebuild,
  -rebase-603.ebuild:
  Pruned old versions.

  20 Nov 2006; <blubb@gentoo.org> rebase-610.ebuild:
  stable on amd64

  15 Nov 2006; Markus Rothe <corsair@gentoo.org> rebase-610.ebuild:
  Stable on ppc64; bug #153766

  03 Nov 2006; nixnut <nixnut@gentoo.org> rebase-610.ebuild:
  Stable on ppc wrt bug 153766

  03 Nov 2006; Olivier Fisette <ribosome@gentoo.org> -rebase-604.ebuild,
  -rebase-606.ebuild, -rebase-607.ebuild, -rebase-608.ebuild,
  -rebase-609.ebuild:
  Pruned old versions.

*rebase-611 (03 Nov 2006)

  03 Nov 2006; Olivier Fisette <ribosome@gentoo.org> +rebase-611.ebuild:
  New upstream version.

  02 Nov 2006; Fabian Groffen <grobian@gentoo.org> rebase-601-r1.ebuild,