@@ -1,44 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/rebase/rebase-808.ebuild,v 1.1 2008/08/27 14:58:50 ribosome Exp $
-
-DESCRIPTION="A restriction enzyme database"
-LICENSE="public-domain"
-HOMEPAGE="http://rebase.neb.com"
-SRC_URI="mirror://gentoo/${P}.tar.bz2"
-
-SLOT="0"
-# Minimal build keeps only the indexed files (if applicable) and the
-# documentation. The non-indexed database is not installed.
-IUSE="emboss minimal"
-KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~sparc-solaris ~x86-solaris"
-
-DEPEND="emboss? ( >=sci-biology/emboss-5.0.0 )"
-
-src_compile() {
-	if use emboss; then
-		echo; einfo "Indexing Rebase for usage with EMBOSS."
-		mkdir REBASE
-		EMBOSS_DATA="." rebaseextract -auto -infile withrefm.${PV} \
-				-protofile proto.${PV} -equivalences \
-				|| die "Indexing Rebase failed."
-		echo
-	fi
-}
-
-src_install() {
-	if ! use minimal; then
-		insinto /usr/share/${PN}
-		doins withrefm.${PV} proto.${PV} || die \
-				"Failed to install raw database."
-	fi
-	newdoc REBASE.DOC README || die "Failed to install documentation."
-	if use emboss; then
-		insinto /usr/share/EMBOSS/data/REBASE
-		doins REBASE/embossre.{enz,ref,sup} || die \
-				"Failed to install EMBOSS data files."
-		insinto /usr/share/EMBOSS/data
-		doins REBASE/embossre.equ \
-				|| die "Failed to install enzyme prototypes file."
-	fi
-}
